Creación de pagina de formulario Empresa, cambio de nombre de los botonos

--- a/admins/formulario-Empresa.html
+++ b/admins/formulario-Empresa.html
@@ -14,7 +14,7 @@
     <!-- As a heading -->
     <nav class="navbar m-3 bg-body-tertiary">
         <div class="container-fluid color-primary nav-motor">
-            <span class="navbar-brand mb-0 h1">Pedidos</span>
+            <span class="navbar-brand mb-0 h1">Empresa</span>
         </div>
     </nav>
 
@@ -52,9 +52,9 @@
                         <label for="">correo Electronico</label>
                     </div>
                     <div class="col-6">
-                        <input type="text" placeholder="Nombre del Producto">
-                        <input type="number" placeholder="Precio">
-                        <input type="number" placeholder="Telefono">
+                        <input type="text" placeholder="Nombre del Empresa">
+                        <input type="number" placeholder="teléfono">
+                        <input type="number" placeholder="Dirección">
                         <input type="email" placeholder="correo Electronico">
                     </div>
                 </div>
@@ -62,7 +62,7 @@
             <div class="col-6">
                 <div class="row">
                     <div class="col-6">
-                        <label for="">Impuesto</label><br>
+                        <label for="">RTN</label><br>
                         <label for="">Descripcion</label><br>
                     </div>
                     <div class="col-6">
