--- a/admins/login-admin/login.html
+++ b/admins/login-admin/login.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="./assets/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    
+        <link rel="stylesheet" href="./assets/styles.css">
 </head>
 
 <body>
@@ -23,14 +26,12 @@
             <div class="login">
                 <h1>Inicia Sesión</h1>
                 <h3>administrador</h3>
-                <form>
-                    <label for="usuario">Correo Electrónico</label>
-                    <input type="text" name="usuario" placeholder="Ingresa tu correo" id="txtUsuario">
-                    <label for="Contraseña">Contraseña</label>
-                    <input type="password" name="password" placeholder="Ingresa tu contraseña" id="txtPsw">
-                </form>
+                    <label for="txtUsuario">Correo Electrónico</label>
+                    <input type="text" name="usuario" class="form-control" placeholder="Ingresa tu correo" id="txtUsuario">
+                    <label for="txtPsw">Contraseña</label>
+                    <input type="password" name="password" placeholder="Ingresa tu contraseña" id="txtPsw" class="form-control" >
                 <br>
-                <button id="login" style="font-weight: bold;" onclick="login()">
+                <button id="login" class="btn btn-warning">
                     Iniciar Sesión
                 </button>
                 <br>
@@ -40,5 +41,8 @@
     </div>
 </body>
 <script src="../../assets/js/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+    crossorigin="anonymous"></script>
 <script src="./assets/js/controlador.js"></script>
 </html>
