--- a/admins/agregar-motoristas/agregar-motorista.html
+++ b/admins/agregar-motoristas/agregar-motorista.html
@@ -119,7 +119,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12 text-center">
-                                <button type="button" class="btn btn-warning" id="btnRegistrar">Registrarse</button>
+                                <button type="button" class="btn btn-warning" id="btnRegistrar" onclick="addMotorista()">Registrarse</button>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btnCerrarAdd">Close</button>
                             </div>
                         </div>
